Website/APc/log.log
[29/Oct/2014 11:38:48] ERROR [django.request:231] Internal Server Error: /deselect/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 39, in deselect
    del request.session[categorie]
  File "/usr/local/lib/python2.7/dist-packages/django/contrib/sessions/backends/base.py", line 56, in __delitem__
    del self._session[key]
KeyError: u'Moederborden'
[29/Oct/2014 11:38:55] ERROR [django.request:231] Internal Server Error: /deselect/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 39, in deselect
    del request.session[categorie]
  File "/usr/local/lib/python2.7/dist-packages/django/contrib/sessions/backends/base.py", line 56, in __delitem__
    del self._session[key]
KeyError: u'Moederborden'
[29/Oct/2014 11:47:41] ERROR [django.request:231] Internal Server Error: /deselect/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 39, in deselect
    del request.session[categorie[1]]
  File "/usr/local/lib/python2.7/dist-packages/django/contrib/sessions/backends/base.py", line 56, in __delitem__
    del self._session[key]
KeyError: u'o'
[29/Oct/2014 11:47:48] ERROR [django.request:231] Internal Server Error: /deselect/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 39, in deselect
    del request.session[categorie[1]]
  File "/usr/local/lib/python2.7/dist-packages/django/contrib/sessions/backends/base.py", line 56, in __delitem__
    del self._session[key]
KeyError: u'o'
[29/Oct/2014 11:48:28] ERROR [django.request:231] Internal Server Error: /deselect/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 39, in deselect
    del request.session[categorie]
  File "/usr/local/lib/python2.7/dist-packages/django/contrib/sessions/backends/base.py", line 56, in __delitem__
    del self._session[key]
KeyError: u'Moederborden'
[29/Oct/2014 12:18:33] ERROR [django.request:231] Internal Server Error: /deselect/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 39, in deselect
    del request.session[categorie]
  File "/usr/local/lib/python2.7/dist-packages/django/contrib/sessions/backends/base.py", line 56, in __delitem__
    del self._session[key]
KeyError: u'Moederborden'
[29/Oct/2014 12:19:10] INFO [pcbuilder.views:32] True
[29/Oct/2014 12:19:10] INFO [pcbuilder.views:33] test
[29/Oct/2014 12:30:35] INFO [pcbuilder.views:32] True
[29/Oct/2014 12:30:35] INFO [pcbuilder.views:33] test
[29/Oct/2014 12:39:16] WARNING [django.request:143] Not Found: /favicon.ico
[29/Oct/2014 12:39:16] WARNING [django.request:143] Not Found: /favicon.ico
[29/Oct/2014 12:52:58] INFO [pcbuilder.views:32] True
[29/Oct/2014 12:52:58] INFO [pcbuilder.views:33] test
[29/Oct/2014 12:54:05] INFO [pcbuilder.views:32] True
[29/Oct/2014 12:54:05] INFO [pcbuilder.views:33] test
[29/Oct/2014 12:59:41] ERROR [django.request:231] Internal Server Error: /
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 98, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 36
    del request.session[productstring] = product
                                       ^
SyntaxError: invalid syntax
[29/Oct/2014 12:59:45] ERROR [django.request:231] Internal Server Error: /
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 98, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 36
    del request.session[productstring] = product
                                       ^
SyntaxError: invalid syntax
[29/Oct/2014 13:00:29] ERROR [django.request:231] Internal Server Error: /
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 98, in get_response
    resolver_match = resolver.resolve(request.path_info)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 340, in resolve
    sub_match = pattern.resolve(new_path)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 224, in resolve
    return ResolverMatch(self.callback, args, kwargs, self.name)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 231, in callback
    self._callback = get_callable(self._callback_str)
  File "/usr/local/lib/python2.7/dist-packages/django/utils/lru_cache.py", line 101, in wrapper
    result = user_function(*args, **kwds)
  File "/usr/local/lib/python2.7/dist-packages/django/core/urlresolvers.py", line 97, in get_callable
    mod = import_module(mod_name)
  File "/usr/lib/python2.7/importlib/__init__.py", line 37, in import_module
    __import__(name)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 36
    del request.session[productstring] = product
                                       ^
SyntaxError: invalid syntax
[29/Oct/2014 13:22:07] ERROR [django.request:231] Internal Server Error: /deselect/
Traceback (most recent call last):
  File "/usr/local/lib/python2.7/dist-packages/django/core/handlers/base.py", line 111, in get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
  File "/home/robin/Work/School/A-Pc/Website/pcbuilder/views.py", line 36, in deselect
    del request.session[categorie]
  File "/usr/local/lib/python2.7/dist-packages/django/contrib/sessions/backends/base.py", line 56, in __delitem__
    del self._session[key]
KeyError: u'Moederborden'
[30/Oct/2014 11:17:52] WARNING [django.request:143] Not Found: /favicon.ico
[30/Oct/2014 11:24:52] WARNING [django.request:143] Not Found: /favicon.ico
[30/Oct/2014 11:24:52] WARNING [django.request:143] Not Found: /favicon.ico
[30/Oct/2014 12:52:55] WARNING [django.request:143] Not Found: /favicon.ico
[30/Oct/2014 12:53:25] WARNING [django.request:143] Not Found: /favicon.ico
